--- a/index.html
+++ b/index.html
@@ -28,13 +28,8 @@
 						</p>
 						<p>
 							Similarly, producing a bright, shiny result from the raw beginnings of a 
-							research project involves <b>a lot of work that is almost never seen or acknowledged.</b>
+							research project involves <b>a lot of work that is almost never seen or acknowledged.'</b>
 						</p>
-						<p>
-							...Another thing that parenting and the “dirty jobs” of research have in common is 
-							that nobody gets taught how to do it. Parents just learn on the job and researchers 
-							typically have to do likewise when it comes to learning how to manage their data.'
-						</p>	
 					</blockquote>
 					<p style = "font-size: large;">
 						-Paul Murrell ‘Introduction to Data Technologies’ (Emphasis Added)
