--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 								collected by CT DEEP with a goal of providing a fluid data exchange with staff 
 								and the public to facilitate and support science-based environmental decision making</p>
 							<p>
-								In time the system will support ambient water quality, continuous 
-								(temperature /conductivity) water quality, and stream connectivity (trail camera) data.
+								In time the system will support ambient water quality, continuous water quality
+								(e.g. temp / conductivity / DO / flow), and stream connectivity (trail camera) data.
 							</p>
 						</div>
 					</div>
@@ -144,7 +144,7 @@
 					<p style = "font-size: x-large;">Customizable query to get specific results</p>
 				</section>
 				<section>
-					<a href="https://www.waterqualitydata.us/webservices_documentation/">https://www.waterqualitydata.us/webservices_documentation/</a>
+					<a href="https://www.waterqualitydata.us/webservices_documentation/" style="font-size:xx-large"> https://www.waterqualitydata.us/webservices_documentation/</a>
 					<img src="images/wqp_web_services_guide.png" alt="wqp web services guide" width="700">
 				</section>
 				<section>
@@ -152,7 +152,7 @@
 					<img src="images/wqp_query.png" alt="wqp query" width="700">
 				</section>
 				<section>
-					<a href="https://ctdeepwatermonitoring.github.io/beachReport/2021">https://ctdeepwatermonitoring.github.io/beachReport/2021</a>
+					<a href="https://ctdeepwatermonitoring.github.io/beachReport/2021" style="font-size:xx-large">https://ctdeepwatermonitoring.github.io/beachReport/2021</a>
 					<img src="images/beach_report.png" alt="beach report" width="700">
 				</section>
 				<section>
@@ -165,6 +165,9 @@
 				</section>
 				<section>
 					<img src="images/acknowledgements.png" alt="acknowledgements" width="920">
+				</section>
+				<section>
+					<img src="images/tech_stack.png" alt="acknowledgements" width="920">
 				</section>
 				<section>
 					Monitoring and Assessment Data Management and Visualization Applications Links
