update title / end slides

--- a/updates.html
+++ b/updates.html
@@ -6,7 +6,7 @@
 
 		<title>2023 MAP Updates</title>
 
-		<link rel="icon" type="image/x-icon" href="images/waterDB.png">
+		<link rel="icon" type="image/x-icon" href="images/monitoring_assessment.png">
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
 		<link rel="stylesheet" href="dist/theme/blue.css">
@@ -16,8 +16,10 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>
-					<img src="images/MAP_Updates_2023/Slide1.PNG" alt="CT DEEP" width="920">
+				<section data-background-image="images/riga_lake.png" data-background-opacity="0.5">
+					<h4>Connecticut Water Monitoring & Assessment 2023 Updates</h4>
+					<hr>
+					<p> EPA Annual IR & Monitoring Meeting - Chelmsford, MA </br> November 06 2023</p>
 				</section>
                 <section>
 					<img src="images/MAP_Updates_2023/Slide2.PNG" alt="CT DEEP" width="920">
@@ -55,8 +57,8 @@
                 <section>
 					<img src="images/MAP_Updates_2023/Slide13.PNG" alt="CT DEEP" width="920">
 				</section>
-                <section>
-					<img src="images/MAP_Updates_2023/Slide14.PNG" alt="CT DEEP" width="920">
+                <section data-background-image="images/sages_ravine.png" data-background-opacity="0.5">
+					<h4>Questions or Comments?</h4>
 				</section>
                 
                 
