added link to bcg map

--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
 					<a href="https://marybecker.github.io/CT_WQX_Chem/">DRAFT CT Chemistry Report*</a><br>
 					<a href="https://marybecker.github.io/CT_MMI_StreamModel/">Stream Health Multi-Metric Indicator (MMI) Model Map</a><br>
 					<a href="https://ctdeep.maps.arcgis.com/apps/MapSeries/index.html?appid=9265f117579546678b70ff9dbd6d0854">CT Volunteer Water Monitoring Map</a><br>
+					<a href="https://ctdeepwatermonitoring.github.io/BCGMap/">BCG 305(b) Assessments Map</a><br>
 					<a href="https://marybecker.github.io/Biointegrity/">Bio-Integrity in CT Streams - Clean Water Act Implementation*</a><br>
 					<a href="https://marybecker.github.io/HQStreamEval/index.html">DRAFT High Quality Stream Vulnerability*</a><br>
 					<a href="https://ctdeepwatermonitoring.github.io/ColdWaterHab/">Cold Water Habitat Map</a><br>
