added LIS hypoxia rpt link

--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 					<a href="https://github.com/marybecker/CTbloomWatch">DRAFT CT bloomWatch*</a><br>
 					<a href="https://marybecker.github.io/CT_WQX_Chem/">DRAFT CT Chemistry Report*</a><br>
 					<a href="https://marybecker.github.io/CT_MMI_StreamModel/">Stream Health Multi-Metric Indicator (MMI) Model Map</a><br>
+					<a href="https://ctdeepwatermonitoring.github.io/LIS_Hypoxia_Report/">LIS Hypoxia Report</a><br>
 					<a href="https://ctdeep.maps.arcgis.com/apps/MapSeries/index.html?appid=9265f117579546678b70ff9dbd6d0854">CT Volunteer Water Monitoring Map</a><br>
 					<a href="https://ctdeepwatermonitoring.github.io/BCGMap/">BCG 305(b) Assessments Map</a><br>
 					<a href="https://marybecker.github.io/Biointegrity/">Bio-Integrity in CT Streams - Clean Water Act Implementation*</a><br>
@@ -189,8 +190,6 @@
 				<hr>
 				<div style="font-size: small;">
 					* Indicates that the map is in draft form or was a project developed as part of UKY coursework.  
-					These maps were developed and express views of the authors and do not represent the official 
-					policy of the Connecticut Dept. of Energy and Environmental Protection.
 				</div>
 					
 
